test gpu support

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,29 @@ profiles {
     }
     apptainer{
         apptainer.enabled = true
-        docker.enable = false
+        docker.enabled = false
         apptainer.autoMounts   = true
+    }
+    mccleary{
+        apptainer.enabled = true
+        apptainer.autoMounts   = true
+        docker.enabled = false
+        executor.name = 'slurm'
+        executor.queueSize = 50
+        executor.submitRateLimit='190/60min'
+        process.queue = { task.time > 24.h ? 'week' : 'day' }
+        process.scratch = 'true'
+        process.executor = 'slurm'
+        params.max_memory = 983.GB
+        params.max_cpus = 64
+    }
+}
+
+process{
+    withLabel:gpus{
+        queue = "gpu"
+        clusterOptions = "--gpus=gtx1080ti:1"
+        containerOptions = { workflow.containerEngine == "apptainer" ? '--nv':
+        ( workflow.containerEngine == "docker" ? '--gpus all': null ) }
     }
 }
