try fix amulet translate

--- a/modules/amulet_translate/Dockerfile
+++ b/modules/amulet_translate/Dockerfile
@@ -11,7 +11,10 @@ RUN wget \
     && mkdir /root/.conda \
     && bash Miniconda3-latest-Linux-x86_64.sh -b \
     && rm -f Miniconda3-latest-Linux-x86_64.sh 
+ENV PATH="/root/miniconda3/envs/amulet/bin:${PATH}"
+ARG PATH="/root/miniconda3/envs/amulet/bin:${PATH}"
 RUN conda --version
+RUN conda init bash
 
 ADD environment.yml /tmp/environment.yml
 WORKDIR /tmp
@@ -19,6 +22,12 @@ RUN conda update -n base -c defaults conda
 RUN conda install -c conda-forge mamba
 RUN mamba env create -f /tmp/environment.yml
 RUN git clone https://github.com/immcantation/amulet.git
+ARG PATH="/root/miniconda3/envs/amulet/bin:${PATH}"
+ARG PATH="/root/miniconda3/envs/amulet/bin:${PATH}"
 WORKDIR /tmp/amulet
 RUN pip install -e .
-ENV PATH /root/miniconda3/envs/amulet/bin:$PATH
+
+# Getting IgBLAST references
+WORKDIR /
+RUN wget -c https://github.com/nf-core/test-datasets/raw/airrflow/database-cache/igblast_base.zip
+RUN unzip igblast_base.zip
