add more embeddings

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,7 +2,13 @@
 params{
     input = "./data/*.tsv"
     outdir = "results"
+    with_gpu = false
+    mode = "HL"
+    max_memory = 6.GB
+    max_cpus = 6
 }
+
+includeConfig 'conf/base.config'
 
 profiles {
     docker {
@@ -26,14 +32,46 @@ profiles {
         process.executor = 'slurm'
         params.max_memory = 983.GB
         params.max_cpus = 64
+        process{
+            withLabel:gpus{
+               queue = "gpu"
+                clusterOptions = "--gpus=gtx1080ti:1"
+                containerOptions = { workflow.containerEngine == "apptainer" ? '--nv':
+               ( workflow.containerEngine == "docker" ? '--gpus all': null ) }
+            }    
+        }
     }
 }
 
-process{
-    withLabel:gpus{
-        queue = "gpu"
-        clusterOptions = "--gpus=gtx1080ti:1"
-        containerOptions = { workflow.containerEngine == "apptainer" ? '--nv':
-        ( workflow.containerEngine == "docker" ? '--gpus all': null ) }
+// Function to ensure that resource requirements don't go beyond
+// a maximum limit
+def check_max(obj, type) {
+    if (type == 'memory') {
+        try {
+            if (obj.compareTo(params.max_memory as nextflow.util.MemoryUnit) == 1)
+                return params.max_memory as nextflow.util.MemoryUnit
+            else
+                return obj
+        } catch (all) {
+            println "   ### ERROR ###   Max memory '${params.max_memory}' is not valid! Using default value: $obj"
+            return obj
+        }
+    } else if (type == 'time') {
+        try {
+            if (obj.compareTo(params.max_time as nextflow.util.Duration) == 1)
+                return params.max_time as nextflow.util.Duration
+            else
+                return obj
+        } catch (all) {
+            println "   ### ERROR ###   Max time '${params.max_time}' is not valid! Using default value: $obj"
+            return obj
+        }
+    } else if (type == 'cpus') {
+        try {
+            return Math.min( obj, params.max_cpus as int )
+        } catch (all) {
+            println "   ### ERROR ###   Max cpus '${params.max_cpus}' is not valid! Using default value: $obj"
+            return obj
+        }
     }
 }
