--- a/nextflow.config
+++ b/nextflow.config
@@ -27,14 +27,14 @@ profiles {
         executor.name = 'slurm'
         executor.queueSize = 50
         executor.submitRateLimit='190/60min'
-        process.queue = { task.time > 24.h ? 'week' : 'day' }
-        process.scratch = 'true'
-        process.executor = 'slurm'
         params.max_memory = 983.GB
         params.max_cpus = 64
         process{
+            executor = 'slurm'
+            scratch = 'true'
+            queue = { task.time > 24.h ? 'week' : 'day' }
             withLabel:gpus{
-               queue = "gpu"
+                queue = "gpu"
                 clusterOptions = "--gpus=gtx1080ti:1"
                 containerOptions = { workflow.containerEngine == "apptainer" ? '--nv':
                ( workflow.containerEngine == "docker" ? '--gpus all': null ) }
