test mccleary singularity

--- a/nextflow.config
+++ b/nextflow.config
@@ -18,11 +18,17 @@ profiles {
     apptainer{
         apptainer.enabled = true
         docker.enabled = false
-        apptainer.autoMounts   = true
+        apptainer.autoMounts = true
     }
+    singularity{
+        singularity.enabled = true
+        docker.enabled = false
+        singularity.autoMounts = true
+    }
+
     mccleary{
-        apptainer.enabled = true
-        apptainer.autoMounts   = true
+        singularity.enabled = true
+        singularity.autoMounts = true
         docker.enabled = false
         executor.name = 'slurm'
         executor.queueSize = 50
@@ -36,7 +42,7 @@ profiles {
             withLabel:gpus{
                 queue = "gpu"
                 clusterOptions = "--gpus=gtx1080ti:1"
-                containerOptions = { workflow.containerEngine == "apptainer" ? '--nv':
+                containerOptions = { workflow.containerEngine == "singularity" ? '--nv':
                ( workflow.containerEngine == "docker" ? '--gpus all': null ) }
             }    
         }
