increase memory ESM

--- a/nextflow.config
+++ b/nextflow.config
@@ -43,8 +43,15 @@ profiles {
                 queue = "gpu"
                 clusterOptions = "--gpus=gtx1080ti:1"
                 containerOptions = { workflow.containerEngine == "singularity" ? '--nv':
-               ( workflow.containerEngine == "docker" ? '--gpus all': null ) }
-            }    
+                ( workflow.containerEngine == "docker" ? '--gpus all': null ) }
+            }
+            withLabel:gpus_highmem{
+                queue = "gpu"
+                clusterOptions = "--gpus=gtx1080ti:1"
+                containerOptions = { workflow.containerEngine == "singularity" ? '--nv':
+                ( workflow.containerEngine == "docker" ? '--gpus all': null ) }
+                memory = 32.GB
+            }   
         }
     }
 }
