add params batch size cell id

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,6 +6,8 @@ params{
     mode = "HL"
     max_memory = 6.GB
     max_cpus = 6
+    cell_id = "cell_id_unique"
+    batch_size = 50
 }
 
 includeConfig 'conf/base.config'
@@ -44,6 +46,7 @@ profiles {
                 clusterOptions = "--gpus=gtx1080ti:1"
                 containerOptions = { workflow.containerEngine == "singularity" ? '--nv':
                 ( workflow.containerEngine == "docker" ? '--gpus all': null ) }
+                time = 6.h
             }
             withLabel:gpus_highmem{
                 queue = "gpu"
@@ -51,6 +54,7 @@ profiles {
                 containerOptions = { workflow.containerEngine == "singularity" ? '--nv':
                 ( workflow.containerEngine == "docker" ? '--gpus all': null ) }
                 memory = 32.GB
+                time = 6.h
             }   
         }
     }
