--- a/nextflow.config
+++ b/nextflow.config
@@ -8,6 +8,7 @@ params{
     max_cpus = 6
     cell_id = "cell_id_unique"
     batch_size = 50
+    skip_translation = false
 }
 
 includeConfig 'conf/base.config'
