--- a/nextflow.config
+++ b/nextflow.config
@@ -44,14 +44,14 @@ profiles {
             queue = { task.time > 24.h ? 'week' : 'day' }
             withLabel:gpus{
                 queue = "gpu"
-                clusterOptions = "--gpus=gtx1080ti:1"
+                clusterOptions = "--gpus=a5000:1"
                 containerOptions = { workflow.containerEngine == "singularity" ? '--nv':
                 ( workflow.containerEngine == "docker" ? '--gpus all': null ) }
                 time = 6.h
             }
             withLabel:gpus_highmem{
                 queue = "gpu"
-                clusterOptions = "--gpus=gtx1080ti:1"
+                clusterOptions = "--gpus=a100:1"
                 containerOptions = { workflow.containerEngine == "singularity" ? '--nv':
                 ( workflow.containerEngine == "docker" ? '--gpus all': null ) }
                 memory = 32.GB
