--- a/nextflow.config
+++ b/nextflow.config
@@ -44,7 +44,7 @@ profiles {
             queue = { task.time > 24.h ? 'week' : 'day' }
             withLabel:gpus{
                 queue = "gpu"
-                clusterOptions = "--gpus=gtx1080ti:1"
+                clusterOptions = "--gpus=1"
                 containerOptions = { workflow.containerEngine == "singularity" ? '--nv':
                 ( workflow.containerEngine == "docker" ? '--gpus all': null ) }
                 time = 6.h
