--- a/nextflow.config
+++ b/nextflow.config
@@ -9,6 +9,7 @@ params{
     cell_id = "cell_id_unique"
     batch_size = 50
     skip_translation = false
+    reference_igblast = "https://raw.githubusercontent.com/nf-core/test-datasets/airrflow/database-cache/igblast_base.zip"
 }
 
 includeConfig 'conf/base.config'
