--- a/nextflow.config
+++ b/nextflow.config
@@ -42,7 +42,7 @@ profiles {
         process{
             executor = 'slurm'
             scratch = 'true'
-            queue = { task.time > 24.h ? 'week' : 'day' }
+            queue = { task.time > 24.h ? 'week' : 'pi_kleinstein,day' }
             withLabel:gpus{
                 queue = "gpu"
                 clusterOptions = "--gpus=1"
