--- a/conf/base.config
+++ b/conf/base.config
@@ -64,6 +64,9 @@ process {
     withLabel:gpus{
         containerOptions = { workflow.containerEngine == "apptainer" ? '--nv':
         ( workflow.containerEngine == "docker" ? '--gpus all': null ) }
+        cpus   = { check_max( 6     * task.attempt, 'cpus'    ) }
+        memory = { check_max( 36.GB * task.attempt, 'memory'  ) }
+        time   = { check_max( 8.h   * task.attempt, 'time'    ) }
     }
     withName:CUSTOM_DUMPSOFTWAREVERSIONS {
         cache = false
